[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlit-dpf-mcp"
version = "0.1.0"
description = "MCP server for MLIT (MLIT Data Platform wrapper)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT License" }

dependencies = [
  "aiohttp>=3.9",
  "pydantic>=2.7",
  "tenacity>=8.2",
  "python-json-logger>=2.0",
  "mcp>=1.2",
  "python-dotenv>=1.0"
]

[project.scripts]
mlit-dpf-mcp = "src.server:main"
